tests/negative/neg_own_lifetime.safe
-- Test: neg_own_lifetime
-- Description: Returning an immutable borrow from a function.
-- Expected: REJECT lifetime_violation

package lifetime_test

   type value_box is record
      value : integer
      next : value_box

   function leak_borrow (ref : value_box) returns value_box
      return ref  -- ERROR: borrowed value outlives lender
